fix c2 map NPE when value is null